Crear modulos para las distintas etapas del RAG Refactorizar lo hecho para acoplarse al nuevo diseño